--- a/sprint_analysis.ipynb
+++ b/sprint_analysis.ipynb
@@ -30,7 +30,9 @@
     "data = pd.read_csv('sprint_data.csv')\n",
     "\n",
     "# Explore dataset\n",
+    "print(\"First 5 rows of the dataset:\")\n",
     "print(data.head())\n",
+    "print(\"\\nSummary statistics of the dataset:\")\n",
     "print(data.describe())\n"
    ]
   },
@@ -49,7 +51,11 @@
     "\n",
     "# Select relevant columns\n",
     "relevant_columns = ['sprint_id', 'team_member', 'task_id', 'task_description', 'estimated_hours', 'actual_hours', 'completion_status']\n",
-    "data = data[relevant_columns]\n"
+    "data = data[relevant_columns]\n",
+    "\n",
+    "# Display the first few rows of the preprocessed dataset\n",
+    "print(\"First 5 rows of the preprocessed dataset:\")\n",
+    "print(data.head())\n"
    ]
   },
   {
@@ -99,8 +105,22 @@
     "# Identify tasks with the highest time difference\n",
     "high_diff_tasks = data.nlargest(10, 'time_diff')\n",
     "\n",
-    "# Display the tasks\n",
+    "# Display the tasks with the highest time differences\n",
+    "print(\"Tasks with the highest differences between estimated and actual hours:\")\n",
     "print(high_diff_tasks[['task_id', 'task_description', 'estimated_hours', 'actual_hours', 'time_diff']])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "conclusion",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Conclusion\n",
+    "\n",
+    "In this analysis, we loaded and preprocessed sprint data, conducted exploratory data analysis to visualize task completion rates and time discrepancies, and identified tasks with significant differences between estimated and actual hours. By leveraging these insights, teams can improve sprint planning, allocate resources more effectively, and enhance overall productivity.\n",
+    "\n",
+    "Further analysis can include trend analysis over multiple sprints and correlation analysis between different variables to gain deeper insights into the factors influencing sprint outcomes.\n"
    ]
   }
  ],
