--- a/sprint_analysis.ipynb
+++ b/sprint_analysis.ipynb
@@ -12,7 +12,7 @@
     "Analyze historical sprint data to identify areas for improvement and enhance future sprint planning.\n",
     "\n",
     "## Instructions\n",
-    "Follow the steps provided in this notebook to load the data, preprocess it, perform exploratory data analysis, and draw insights for sprint retrospectives.\n"
+    "Follow the steps provided in this notebook to load the data, preprocess it, perform exploratory data analysis, train a predictive model, and draw insights for sprint retrospectives.\n"
    ]
   },
   {
@@ -92,22 +92,86 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b93f3f24",
+   "id": "model_training",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "# Step 4: Drawing Insights\n",
+    "# Step 4: Model Training and Evaluation\n",
     "\n",
-    "# Calculate difference between estimated and actual hours\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "\n",
+    "# Encode categorical variables\n",
+    "label_encoder = LabelEncoder()\n",
+    "data['team_member'] = label_encoder.fit_transform(data['team_member'])\n",
+    "data['task_description'] = label_encoder.fit_transform(data['task_description'])\n",
+    "data['completion_status'] = label_encoder.fit_transform(data['completion_status'])\n",
+    "\n",
+    "# Standardize numerical features\n",
+    "scaler = StandardScaler()\n",
+    "data[['estimated_hours', 'actual_hours']] = scaler.fit_transform(data[['estimated_hours', 'actual_hours']])\n",
+    "\n",
+    "# Create new feature for time difference\n",
     "data['time_diff'] = data['actual_hours'] - data['estimated_hours']\n",
+    "data[['time_diff']] = scaler.fit_transform(data[['time_diff']])\n",
     "\n",
-    "# Identify tasks with the highest time difference\n",
-    "high_diff_tasks = data.nlargest(10, 'time_diff')\n",
+    "# Split data into training and testing sets\n",
+    "X = data.drop(columns=['sprint_id', 'completion_status'])\n",
+    "y = data['completion_status']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Display the tasks with the highest time differences\n",
-    "print(\"Tasks with the highest differences between estimated and actual hours:\")\n",
-    "print(high_diff_tasks[['task_id', 'task_description', 'estimated_hours', 'actual_hours', 'time_diff']])\n"
+    "# Train a RandomForest model\n",
+    "model = RandomForestClassifier(random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict on the test set\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Evaluate model performance\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "precision = precision_score(y_test, y_pred, average='weighted')\n",
+    "recall = recall_score(y_test, y_pred, average='weighted')\n",
+    "f1 = f1_score(y_test, y_pred, average='weighted')\n",
+    "\n",
+    "print(f'Accuracy: {accuracy}')\n",
+    "print(f'Precision: {precision}')\n",
+    "print(f'Recall: {recall}')\n",
+    "print(f'F1 Score: {f1}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "predictive_analysis",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Step 5: Predictive Analysis and Insights\n",
+    "\n",
+    "# Predict outcomes for new sprints (example new data)\n",
+    "new_data = pd.DataFrame({\n",
+    "    'team_member': [0, 1, 2],  # Example encoded values\n",
+    "    'task_id': [101, 201, 301],\n",
+    "    'task_description': [0, 1, 2],  # Example encoded values\n",
+    "    'estimated_hours': [5, 8, 12],\n",
+    "    'actual_hours': [6, 7, 10],\n",
+    "    'time_diff': [0.2, -0.2, -0.1]\n",
+    "})\n",
+    "new_data[['estimated_hours', 'actual_hours', 'time_diff']] = scaler.transform(new_data[['estimated_hours', 'actual_hours', 'time_diff']])\n",
+    "predictions = model.predict(new_data)\n",
+    "\n",
+    "# Analyze predictions\n",
+    "new_data['predicted_completion_status'] = predictions\n",
+    "print(new_data)\n",
+    "\n",
+    "# Generate insights\n",
+    "for i, row in new_data.iterrows():\n",
+    "    if row['predicted_completion_status'] == 0:  # Example status code for 'not completed'\n",
+    "        print(f\"Task {row['task_id']} by team member {label_encoder.inverse_transform([row['team_member']])[0]} is likely to be delayed.\")\n"
    ]
   },
   {
@@ -118,7 +182,7 @@
     "\n",
     "## Conclusion\n",
     "\n",
-    "In this analysis, we loaded and preprocessed sprint data, conducted exploratory data analysis to visualize task completion rates and time discrepancies, and identified tasks with significant differences between estimated and actual hours. By leveraging these insights, teams can improve sprint planning, allocate resources more effectively, and enhance overall productivity.\n",
+    "In this analysis, we loaded and preprocessed sprint data, conducted exploratory data analysis to visualize task completion rates and time discrepancies, trained a machine learning model to predict sprint outcomes, and generated actionable insights based on the model's predictions. By leveraging these insights, teams can improve sprint planning, allocate resources more effectively, and enhance overall productivity.\n",
     "\n",
     "Further analysis can include trend analysis over multiple sprints and correlation analysis between different variables to gain deeper insights into the factors influencing sprint outcomes.\n"
    ]
