--- a/sprint_analysis.ipynb
+++ b/sprint_analysis.ipynb
@@ -18,6 +18,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "install_dependencies",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Install necessary libraries\n",
+    "!pip install -r requirements.txt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f694dbea",
    "metadata": {},
    "outputs": [],
@@ -52,6 +64,9 @@
     "# Select relevant columns\n",
     "relevant_columns = ['sprint_id', 'team_member', 'task_id', 'task_description', 'estimated_hours', 'actual_hours', 'completion_status']\n",
     "data = data[relevant_columns]\n",
+    "\n",
+    "# Create new feature for time difference\n",
+    "data['time_diff'] = data['actual_hours'] - data['estimated_hours']\n",
     "\n",
     "# Display the first few rows of the preprocessed dataset\n",
     "print(\"First 5 rows of the preprocessed dataset:\")\n",
@@ -112,11 +127,7 @@
     "\n",
     "# Standardize numerical features\n",
     "scaler = StandardScaler()\n",
-    "data[['estimated_hours', 'actual_hours']] = scaler.fit_transform(data[['estimated_hours', 'actual_hours']])\n",
-    "\n",
-    "# Create new feature for time difference\n",
-    "data['time_diff'] = data['actual_hours'] - data['estimated_hours']\n",
-    "data[['time_diff']] = scaler.fit_transform(data[['time_diff']])\n",
+    "data[['estimated_hours', 'actual_hours', 'time_diff']] = scaler.fit_transform(data[['estimated_hours', 'actual_hours', 'time_diff']])\n",
     "\n",
     "# Split data into training and testing sets\n",
     "X = data.drop(columns=['sprint_id', 'completion_status'])\n",
@@ -152,14 +163,14 @@
     "\n",
     "# Step 5: Predictive Analysis and Insights\n",
     "\n",
-    "# Predict outcomes for new sprints (example new data)\n",
+    "# Prepare new data for prediction (example new data)\n",
     "new_data = pd.DataFrame({\n",
     "    'team_member': [0, 1, 2],  # Example encoded values\n",
     "    'task_id': [101, 201, 301],\n",
     "    'task_description': [0, 1, 2],  # Example encoded values\n",
     "    'estimated_hours': [5, 8, 12],\n",
     "    'actual_hours': [6, 7, 10],\n",
-    "    'time_diff': [0.2, -0.2, -0.1]\n",
+    "    'time_diff': [1, -1, -2]\n",
     "})\n",
     "new_data[['estimated_hours', 'actual_hours', 'time_diff']] = scaler.transform(new_data[['estimated_hours', 'actual_hours', 'time_diff']])\n",
     "predictions = model.predict(new_data)\n",
