--- a/sprint_analysis.ipynb
+++ b/sprint_analysis.ipynb
@@ -104,8 +104,8 @@
     "plt.show()\n"
    ]
   },
-  {
-   "cell_type": "code",
+    {
+    "cell_type": "code",
    "execution_count": null,
    "id": "model_training",
    "metadata": {},
@@ -163,26 +163,20 @@
     "\n",
     "# Step 5: Predictive Analysis and Insights\n",
     "\n",
-    "# Prepare new data for prediction (example new data)\n",
-    "new_data = pd.DataFrame({\n",
-    "    'team_member': [0, 1, 2],  # Example encoded values\n",
-    "    'task_id': [101, 201, 301],\n",
-    "    'task_description': [0, 1, 2],  # Example encoded values\n",
-    "    'estimated_hours': [5, 8, 12],\n",
-    "    'actual_hours': [6, 7, 10],\n",
-    "    'time_diff': [1, -1, -2]\n",
-    "})\n",
-    "new_data[['estimated_hours', 'actual_hours', 'time_diff']] = scaler.transform(new_data[['estimated_hours', 'actual_hours', 'time_diff']])\n",
-    "predictions = model.predict(new_data)\n",
+    "# Use a subset of the test data as new data for prediction\n",
+    "new_data = X_test.copy().reset_index(drop=True)\n",
+    "new_data['predicted_completion_status'] = model.predict(new_data)\n",
     "\n",
     "# Analyze predictions\n",
-    "new_data['predicted_completion_status'] = predictions\n",
+    "new_data['predicted_completion_status'] = new_data['predicted_completion_status'].astype(int)\n",
+    "new_data['team_member'] = label_encoder.inverse_transform(new_data['team_member'])\n",
+    "new_data['task_description'] = label_encoder.inverse_transform(new_data['task_description'])\n",
     "print(new_data)\n",
     "\n",
     "# Generate insights\n",
     "for i, row in new_data.iterrows():\n",
     "    if row['predicted_completion_status'] == 0:  # Example status code for 'not completed'\n",
-    "        print(f\"Task {row['task_id']} by team member {label_encoder.inverse_transform([row['team_member']])[0]} is likely to be delayed.\")\n"
+    "        print(f\"Task {row['task_id']} by team member {row['team_member']} is likely to be delayed.\")\n"
    ]
   },
   {
