--- a/sprint_analysis.ipynb
+++ b/sprint_analysis.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e06052a8",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +17,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "install_dependencies",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +28,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f694dbea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +48,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a274d4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +72,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34f9ea98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,10 +99,9 @@
     "plt.show()\n"
    ]
   },
-    {
-    "cell_type": "code",
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "model_training",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,18 +114,21 @@
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
     "\n",
     "# Encode categorical variables\n",
-    "label_encoder = LabelEncoder()\n",
-    "data['team_member'] = label_encoder.fit_transform(data['team_member'])\n",
-    "data['task_description'] = label_encoder.fit_transform(data['task_description'])\n",
-    "data['completion_status'] = label_encoder.fit_transform(data['completion_status'])\n",
+    "team_member_encoder = LabelEncoder()\n",
+    "task_description_encoder = LabelEncoder()\n",
+    "completion_status_encoder = LabelEncoder()\n",
+    "\n",
+    "data['team_member_encoded'] = team_member_encoder.fit_transform(data['team_member'])\n",
+    "data['task_description_encoded'] = task_description_encoder.fit_transform(data['task_description'])\n",
+    "data['completion_status_encoded'] = completion_status_encoder.fit_transform(data['completion_status'])\n",
     "\n",
     "# Standardize numerical features\n",
     "scaler = StandardScaler()\n",
     "data[['estimated_hours', 'actual_hours', 'time_diff']] = scaler.fit_transform(data[['estimated_hours', 'actual_hours', 'time_diff']])\n",
     "\n",
     "# Split data into training and testing sets\n",
-    "X = data.drop(columns=['sprint_id', 'completion_status'])\n",
-    "y = data['completion_status']\n",
+    "X = data[['team_member_encoded', 'task_description_encoded', 'estimated_hours', 'actual_hours', 'time_diff']]\n",
+    "y = data['completion_status_encoded']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Train a RandomForest model\n",
@@ -156,7 +153,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "predictive_analysis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,21 +163,22 @@
     "new_data = X_test.copy().reset_index(drop=True)\n",
     "new_data['predicted_completion_status'] = model.predict(new_data)\n",
     "\n",
-    "# Analyze predictions\n",
-    "new_data['predicted_completion_status'] = new_data['predicted_completion_status'].astype(int)\n",
-    "new_data['team_member'] = label_encoder.inverse_transform(new_data['team_member'])\n",
-    "new_data['task_description'] = label_encoder.inverse_transform(new_data['task_description'])\n",
-    "print(new_data)\n",
+    "# Decode the categorical variables\n",
+    "new_data['team_member'] = team_member_encoder.inverse_transform(new_data['team_member_encoded'])\n",
+    "new_data['task_description'] = task_description_encoder.inverse_transform(new_data['task_description_encoded'])\n",
+    "new_data['predicted_completion_status'] = completion_status_encoder.inverse_transform(new_data['predicted_completion_status'])\n",
+    "\n",
+    "# Display predictions\n",
+    "print(new_data[['team_member', 'task_id', 'task_description', 'estimated_hours', 'actual_hours', 'predicted_completion_status']])\n",
     "\n",
     "# Generate insights\n",
     "for i, row in new_data.iterrows():\n",
-    "    if row['predicted_completion_status'] == 0:  # Example status code for 'not completed'\n",
+    "    if row['predicted_completion_status'] == 'Not Completed':  # Adjust according to your status code\n",
     "        print(f\"Task {row['task_id']} by team member {row['team_member']} is likely to be delayed.\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "conclusion",
    "metadata": {},
    "source": [
     "\n",
