--- a/sprint_analysis.ipynb
+++ b/sprint_analysis.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "# Sprint Retrospective Analysis\n",
     "\n",
     "## Objective\n",
@@ -20,7 +19,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Install necessary libraries\n",
     "!pip install -r requirements.txt\n"
    ]
@@ -31,7 +29,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Step 1: Load the Dataset\n",
     "import pandas as pd\n",
     "\n",
@@ -51,11 +48,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Step 2: Data Preprocessing\n",
     "\n",
     "# Handle missing values (if any)\n",
-    "data = data.dropna()\n",
+    "data = data.dropna(subset=['estimated_hours', 'actual_hours', 'completion_status'])\n",
     "\n",
     "# Select relevant columns\n",
     "relevant_columns = ['sprint_id', 'team_member', 'task_id', 'task_description', 'estimated_hours', 'actual_hours', 'completion_status']\n",
@@ -75,7 +71,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Step 3: Exploratory Data Analysis\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -96,6 +91,25 @@
     "plt.title('Estimated vs Actual Time for Tasks')\n",
     "plt.xlabel('Estimated Hours')\n",
     "plt.ylabel('Actual Hours')\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot time difference by sprint\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "sns.boxplot(x='sprint_id', y='time_diff', data=data)\n",
+    "plt.title('Time Difference by Sprint')\n",
+    "plt.xlabel('Sprint ID')\n",
+    "plt.ylabel('Time Difference (Actual - Estimated Hours)')\n",
+    "plt.axhline(0, color='r', linestyle='--')\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot average time difference by team member\n",
+    "team_member_perf = data.groupby('team_member')['time_diff'].mean().reset_index()\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "sns.barplot(x='team_member', y='time_diff', data=team_member_perf)\n",
+    "plt.title('Average Time Difference by Team Member')\n",
+    "plt.xlabel('Team Member')\n",
+    "plt.ylabel('Average Time Difference (Actual - Estimated Hours)')\n",
+    "plt.axhline(0, color='r', linestyle='--')\n",
     "plt.show()\n"
    ]
   },
@@ -105,49 +119,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Step 4: Model Training and Evaluation\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
     "# Encode categorical variables\n",
     "team_member_encoder = LabelEncoder()\n",
     "task_description_encoder = LabelEncoder()\n",
-    "completion_status_encoder = LabelEncoder()\n",
     "\n",
     "data['team_member_encoded'] = team_member_encoder.fit_transform(data['team_member'])\n",
     "data['task_description_encoded'] = task_description_encoder.fit_transform(data['task_description'])\n",
-    "data['completion_status_encoded'] = completion_status_encoder.fit_transform(data['completion_status'])\n",
     "\n",
     "# Standardize numerical features\n",
     "scaler = StandardScaler()\n",
     "data[['estimated_hours', 'actual_hours', 'time_diff']] = scaler.fit_transform(data[['estimated_hours', 'actual_hours', 'time_diff']])\n",
     "\n",
-    "# Split data into training and testing sets\n",
-    "X = data[['team_member_encoded', 'task_description_encoded', 'estimated_hours', 'actual_hours', 'time_diff']]\n",
-    "y = data['completion_status_encoded']\n",
+    "# Prepare data for model training\n",
+    "X = data[['team_member_encoded', 'task_description_encoded', 'estimated_hours']]\n",
+    "y = data['actual_hours']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Train a RandomForest model\n",
-    "model = RandomForestClassifier(random_state=42)\n",
+    "model = RandomForestRegressor(random_state=42)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
     "# Predict on the test set\n",
     "y_pred = model.predict(X_test)\n",
     "\n",
     "# Evaluate model performance\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "precision = precision_score(y_test, y_pred, average='weighted')\n",
-    "recall = recall_score(y_test, y_pred, average='weighted')\n",
-    "f1 = f1_score(y_test, y_pred, average='weighted')\n",
-    "\n",
-    "print(f'Accuracy: {accuracy}')\n",
-    "print(f'Precision: {precision}')\n",
-    "print(f'Recall: {recall}')\n",
-    "print(f'F1 Score: {f1}')\n"
+    "print(\"Model performance on the test set:\")\n",
+    "print(f'R^2 Score: {model.score(X_test, y_test)}')\n"
    ]
   },
   {
@@ -156,32 +159,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step 5: Predictive Analysis for Sprint 6\n",
     "\n",
-    "# Step 5: Predictive Analysis and Insights\n",
+    "# Prepare data for sprint 6\n",
+    "sprint_6 = data[data['sprint_id'] == 6].copy()\n",
+    "sprint_6['team_member_encoded'] = team_member_encoder.transform(sprint_6['team_member'])\n",
+    "sprint_6['task_description_encoded'] = task_description_encoder.transform(sprint_6['task_description'])\n",
     "\n",
-    "# Use a subset of the test data as new data for prediction\n",
-    "new_data = X_test.copy().reset_index(drop=True)\n",
-    "new_data['predicted_completion_status'] = model.predict(new_data)\n",
+    "# Predict estimated_hours and actual_hours for sprint 6\n",
+    "sprint_6['estimated_hours'] = model.predict(sprint_6[['team_member_encoded', 'task_description_encoded', 'estimated_hours']])\n",
+    "sprint_6['actual_hours'] = model.predict(sprint_6[['team_member_encoded', 'task_description_encoded', 'estimated_hours']])\n",
     "\n",
     "# Decode the categorical variables\n",
-    "new_data['team_member'] = team_member_encoder.inverse_transform(new_data['team_member_encoded'])\n",
-    "new_data['task_description'] = task_description_encoder.inverse_transform(new_data['task_description_encoded'])\n",
-    "new_data['predicted_completion_status'] = completion_status_encoder.inverse_transform(new_data['predicted_completion_status'])\n",
+    "sprint_6['team_member'] = team_member_encoder.inverse_transform(sprint_6['team_member_encoded'])\n",
+    "sprint_6['task_description'] = task_description_encoder.inverse_transform(sprint_6['task_description_encoded'])\n",
     "\n",
-    "# Display predictions\n",
-    "print(new_data[['team_member', 'task_id', 'task_description', 'estimated_hours', 'actual_hours', 'predicted_completion_status']])\n",
-    "\n",
-    "# Generate insights\n",
-    "for i, row in new_data.iterrows():\n",
-    "    if row['predicted_completion_status'] == 'Not Completed':  # Adjust according to your status code\n",
-    "        print(f\"Task {row['task_id']} by team member {row['team_member']} is likely to be delayed.\")\n"
+    "# Display predictions for sprint 6\n",
+    "print(\"Predictions for sprint 6:\")\n",
+    "print(sprint_6[['team_member', 'task_id', 'task_description', 'estimated_hours', 'actual_hours']])\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "## Conclusion\n",
     "\n",
     "In this analysis, we loaded and preprocessed sprint data, conducted exploratory data analysis to visualize task completion rates and time discrepancies, trained a machine learning model to predict sprint outcomes, and generated actionable insights based on the model's predictions. By leveraging these insights, teams can improve sprint planning, allocate resources more effectively, and enhance overall productivity.\n",
