--- a/sprint_analysis.ipynb
+++ b/sprint_analysis.ipynb
@@ -31,6 +31,7 @@
    "source": [
     "# Step 1: Load the Dataset\n",
     "import pandas as pd\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
     "# Load dataset\n",
     "data = pd.read_csv('sprint_data.csv')\n",
@@ -127,30 +128,37 @@
     "\n",
     "# Encode categorical variables\n",
     "team_member_encoder = LabelEncoder()\n",
-    "task_description_encoder = LabelEncoder()\n",
-    "\n",
     "data['team_member_encoded'] = team_member_encoder.fit_transform(data['team_member'])\n",
-    "data['task_description_encoded'] = task_description_encoder.fit_transform(data['task_description'])\n",
     "\n",
-    "# Standardize numerical features\n",
-    "scaler = StandardScaler()\n",
-    "data[['estimated_hours', 'actual_hours', 'time_diff']] = scaler.fit_transform(data[['estimated_hours', 'actual_hours', 'time_diff']])\n",
+    "# Vectorize task descriptions\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "task_description_vectors = vectorizer.fit_transform(data['task_description'])\n",
     "\n",
     "# Prepare data for model training\n",
-    "X = data[['team_member_encoded', 'task_description_encoded', 'estimated_hours']]\n",
-    "y = data['actual_hours']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_estimate = pd.concat([data[['team_member_encoded']], pd.DataFrame(task_description_vectors.toarray())], axis=1)\n",
+    "X_estimate.columns = X_estimate.columns.astype(str)  # Ensure all feature names are strings\n",
+    "y_estimate = data['estimated_hours']\n",
+    "X_actual = pd.concat([data[['team_member_encoded', 'estimated_hours']], pd.DataFrame(task_description_vectors.toarray())], axis=1)\n",
+    "X_actual.columns = X_actual.columns.astype(str)  # Ensure all feature names are strings\n",
+    "y_actual = data['actual_hours']\n",
     "\n",
-    "# Train a RandomForest model\n",
-    "model = RandomForestRegressor(random_state=42)\n",
-    "model.fit(X_train, y_train)\n",
+    "X_estimate_train, X_estimate_test, y_estimate_train, y_estimate_test = train_test_split(X_estimate, y_estimate, test_size=0.2, random_state=42)\n",
+    "X_actual_train, X_actual_test, y_actual_train, y_actual_test = train_test_split(X_actual, y_actual, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Predict on the test set\n",
-    "y_pred = model.predict(X_test)\n",
+    "# Train a RandomForest model for estimated hours\n",
+    "model_estimate = RandomForestRegressor(random_state=42)\n",
+    "model_estimate.fit(X_estimate_train, y_estimate_train)\n",
+    "\n",
+    "# Train a RandomForest model for actual hours\n",
+    "model_actual = RandomForestRegressor(random_state=42)\n",
+    "model_actual.fit(X_actual_train, y_actual_train)\n",
     "\n",
     "# Evaluate model performance\n",
-    "print(\"Model performance on the test set:\")\n",
-    "print(f'R^2 Score: {model.score(X_test, y_test)}')\n"
+    "print(\"Model performance for estimated hours on the test set:\")\n",
+    "print(f'R^2 Score: {model_estimate.score(X_estimate_test, y_estimate_test)}')\n",
+    "\n",
+    "print(\"Model performance for actual hours on the test set:\")\n",
+    "print(f'R^2 Score: {model_actual.score(X_actual_test, y_actual_test)}')\n"
    ]
   },
   {
@@ -162,36 +170,43 @@
     "# Step 5: Predictive Analysis for Sprint 6\n",
     "\n",
     "# Prepare data for sprint 6\n",
-    "sprint_6 = data[data['sprint_id'] == 6].copy()\n",
-    "sprint_6['team_member_encoded'] = team_member_encoder.transform(sprint_6['team_member'])\n",
-    "sprint_6['task_description_encoded'] = task_description_encoder.transform(sprint_6['task_description'])\n",
+    "sprint_6 = pd.DataFrame({\n",
+    "    'team_member': ['Alice', 'Bob', 'Charlie'],\n",
+    "    'task_description': ['Develop Feature', 'Test feature', 'Review Code'],\n",
+    "    'team_member_encoded': team_member_encoder.transform(['Alice', 'Bob', 'Charlie']),\n",
+    "})\n",
+    "sprint_6_task_description_vectors = vectorizer.transform(sprint_6['task_description'])\n",
     "\n",
-    "# Predict estimated_hours and actual_hours for sprint 6\n",
-    "sprint_6['estimated_hours'] = model.predict(sprint_6[['team_member_encoded', 'task_description_encoded', 'estimated_hours']])\n",
-    "sprint_6['actual_hours'] = model.predict(sprint_6[['team_member_encoded', 'task_description_encoded', 'estimated_hours']])\n",
+    "# Predict estimated_hours for sprint 6\n",
+    "sprint_6_X_estimate = pd.concat([sprint_6[['team_member_encoded']], pd.DataFrame(sprint_6_task_description_vectors.toarray())], axis=1)\n",
+    "sprint_6_X_estimate.columns = sprint_6_X_estimate.columns.astype(str)  # Ensure all feature names are strings\n",
+    "sprint_6['estimated_hours'] = model_estimate.predict(sprint_6_X_estimate)\n",
+    "\n",
+    "# Predict actual_hours for sprint 6\n",
+    "sprint_6_X_actual = pd.concat([sprint_6[['team_member_encoded', 'estimated_hours']], pd.DataFrame(sprint_6_task_description_vectors.toarray())], axis=1)\n",
+    "sprint_6['actual_hours'] = model_actual.predict(sprint_6_X_actual)\n",
     "\n",
     "# Decode the categorical variables\n",
     "sprint_6['team_member'] = team_member_encoder.inverse_transform(sprint_6['team_member_encoded'])\n",
-    "sprint_6['task_description'] = task_description_encoder.inverse_transform(sprint_6['task_description_encoded'])\n",
     "\n",
     "# Display predictions for sprint 6\n",
     "print(\"Predictions for sprint 6:\")\n",
-    "print(sprint_6[['team_member', 'task_id', 'task_description', 'estimated_hours', 'actual_hours']])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "print(sprint_6[['team_member', 'task_description', 'estimated_hours', 'actual_hours']])\n"
+    ]
+    },
+    {
+    "cell_type": "markdown",
+    "metadata": {},
+    "source": [
     "## Conclusion\n",
     "\n",
     "In this analysis, we loaded and preprocessed sprint data, conducted exploratory data analysis to visualize task completion rates and time discrepancies, trained a machine learning model to predict sprint outcomes, and generated actionable insights based on the model's predictions. By leveraging these insights, teams can improve sprint planning, allocate resources more effectively, and enhance overall productivity.\n",
     "\n",
     "Further analysis can include trend analysis over multiple sprints and correlation analysis between different variables to gain deeper insights into the factors influencing sprint outcomes.\n"
-   ]
-  }
- ],
- "metadata": {},
- "nbformat": 4,
- "nbformat_minor": 5
-}
+    ]
+    }
+    ],
+    "metadata": {},
+    "nbformat": 4,
+    "nbformat_minor": 5
+    }
