--- a/sprint_analysis.ipynb
+++ b/sprint_analysis.ipynb
@@ -161,7 +161,7 @@
     "print(f'R^2 Score: {model_actual.score(X_actual_test, y_actual_test)}')\n"
    ]
   },
-  {
+    {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -184,6 +184,7 @@
     "\n",
     "# Predict actual_hours for sprint 6\n",
     "sprint_6_X_actual = pd.concat([sprint_6[['team_member_encoded', 'estimated_hours']], pd.DataFrame(sprint_6_task_description_vectors.toarray())], axis=1)\n",
+    "sprint_6_X_actual.columns = sprint_6_X_actual.columns.astype(str)  # Ensure all feature names are strings\n",
     "sprint_6['actual_hours'] = model_actual.predict(sprint_6_X_actual)\n",
     "\n",
     "# Decode the categorical variables\n",
